Enemy Spawner, Game Manager + tree

--- a/SKNIGame/.vscode/settings.json
+++ b/SKNIGame/.vscode/settings.json
@@ -43,6 +43,8 @@
         "**/*.meta":true,
         "**/*.prefab":true,
         "**/*.unity":true,
+        "**/*.blend":true,
+        "**/*.blend1":true,                        
         "build/":true,
         "Build/":true,
         "Library/":true,
